# Alter_jira

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: person.py
src/config/: db.py  settings.py
src/models/: person.py  task.py
src/services/: person.py
src/structs/: person.py
